--- a/doc/登录注册注销.md
+++ b/doc/登录注册注销.md
@@ -3,14 +3,14 @@
 	1.检查字段
 	2.查询是否存在
 		> 存在抛出异常,由异常切面类捕抓返回消息
-	3.生成jwt,已(密钥+jwt,userId)存储redis中
+	3.生成jwt,已(密钥+userId,jwt)存储redis中
 	4.返回dto对象
 
 ## 登录
 	1.检查字段
 	2.查询是否存在
 		> 不存在抛出异常,由异常切面类捕抓返回消息
-	3.生成jwt,已(密钥+jwt,userId)存储redis中
+	3.生成jwt,已(密钥+userId,jwt)存储redis中
 	4.返回dto对象
 
 ## 注销
