--- a/doc/登录注册注销.md
+++ b/doc/登录注册注销.md
@@ -1,17 +1,36 @@
 
 ## 注册
 	1.检查字段
-	2.查询是否存在
+	2.查询是否存在用户
 		> 存在抛出异常,由异常切面类捕抓返回消息
-	3.生成jwt,已(密钥+userId,jwt)存储redis中
-	4.返回dto对象
+	3.不存在用户进行创建并设置信息和未激活状态插入数据库(密钥也插入数据库)
+	4.通过加密email+random生成密钥key
+	5.以(密钥key,email)形式放入redis,设置过期时间
+	4.生成jwt,已(密钥+userId,jwt)存储redis中
+	5.以服务器地址+请求url?key=密钥的形式发送内容
+	6.发送内容给目标邮箱
+
+## 激活
+	1.根据密钥key得到email
+	2.不存在说明以过期或是伪造的密钥key
+	3.过期时根据密钥获得用户email重新发送邮件,并重定向到一个页面提示用户是激活成功还是失败
+	4.根据email从数据库得到用户
+	5.设置激活状态
+	6.插入数据库
 
 ## 登录
 	1.检查字段
 	2.查询是否存在
 		> 不存在抛出异常,由异常切面类捕抓返回消息
-	3.生成jwt,已(密钥+userId,jwt)存储redis中
-	4.返回dto对象
+	3.得到用户检查激活状态,未激活抛出异常
+	4.检查密码		
+	5.生成jwt,已(密钥+userId,jwt)存储redis中
+	6.将token和用户信息放入dto返回
+	7.让前端把jwt放入cookie
 
 ## 注销
-	1.删除redis中存放的jwt
+	1.从header中获取token
+	2.获取token解析出id
+	3.根据id获取redis中的token,比对token是否一致
+	4.删除redis中的token
+	5.前端删除token的用户信息
